# flytwo-pro-backend/internal/api/routes.go
@@ -24,8 +24,11 @@ func (api *Api) BindRoutes() {
 
 	api.Router.Route("/api", func(r chi.Router) {
 		r.Route("/v1", func(r chi.Router) {
-			r.Post("/catmat/import", api.handleImportCatmat)
-			r.Post("/catser/import", api.handleImportCatser)
+			r.Group(func(r chi.Router) {
+				r.Use(api.AuthMiddleware)
+				r.Post("/catmat/import", api.handleImportCatmat)
+				r.Post("/catser/import", api.handleImportCatser)
+			})
 
 			r.Route("/users", func(r chi.Router) {
 				r.Post("/signup", api.handleSignupUser)
